# kokkos

./: .clang-tidy  .hpsf-gitlab-ci.yml  .jenkins  .travis.yml  BUILD.md  CMakeLists.txt  Makefile.kokkos  Makefile.targets  appveyor.yml  sonar-project.properties
.github/workflows/: codeql.yml  continuous-integration-stager.yml  continuous-integration-workflow-32bit.yml  continuous-integration-workflow-hpx.yml  continuous-integration-workflow-msvc.yml  continuous-integration-workflow.yml  main.yml  performance-benchmark.yml  scorecard.yml  sonarcloud.yml  windows.yml
.gitlab/: hpsf-gitlab-ci.yml
algorithms/src/: Kokkos_RadixSort.hpp  Kokkos_Random.hpp
algorithms/unit_tests/: CMakeLists.txt  Makefile  TestBinSortA.hpp  TestHIP.cpp  TestRandom.hpp  TestSerial.cpp  TestSort.hpp  TestSortByKey.hpp  TestStdAlgorithmsCommon.hpp  TestStdAlgorithmsExclusiveScan.cpp  TestStdAlgorithmsForEach.cpp  TestStdAlgorithmsInclusiveScan.cpp  TestStdAlgorithmsIsSorted.cpp  TestStdAlgorithmsModOps.cpp  TestStdAlgorithmsPartitionCopy.cpp  TestStdAlgorithmsTransformExclusiveScan.cpp  TestStdAlgorithmsTransformInclusiveScan.cpp  TestStdReducers.cpp
benchmarks/bytes_and_flops/: CMakeLists.txt  bench_unroll_stride.hpp  main.cpp
build_cmake/: cmake_tree  configure.sh
build_cmake/test_kokkos/: CMakeLists.txt  configure.sh
build_cmake/test_kokkos_pkg/: CMakeLists.txt  configure.sh  test_kokkos.cpp
build_cmake_clang/: configure.sh
build_cmake_clang/test_kokkos_pkg/: CMakeLists.txt  configure.sh
build_gen/: configure.sh  gen_tree
build_gen/test_kokkos/: CMakeLists.txt  configure.sh
build_gen/test_kokkos_pkg/: CMakeLists.txt
build_gen_clang/: configure.sh
build_gen_clang/test_kokkos_pkg/: CMakeLists.txt  configure.sh
cmake/: KokkosCore_config.h.in  fake_tribits.cmake  kokkos_arch.cmake  kokkos_build.cmake  kokkos_compiler_id.cmake  kokkos_enable_devices.cmake  kokkos_enable_options.cmake  kokkos_functions.cmake  kokkos_pick_cxx_std.cmake  kokkos_test_cxx_std.cmake  kokkos_tpls.cmake  kokkos_tribits.cmake
containers/performance_tests/: Makefile  TestDynRankView.hpp  TestHIP.cpp
containers/src/: CMakeLists.txt  Kokkos_Bitset.hpp  Kokkos_DualView.hpp  Kokkos_DynRankView.hpp  Kokkos_DynamicView.hpp  Kokkos_OffsetView.hpp  Kokkos_ScatterView.hpp  Kokkos_UnorderedMap.hpp
containers/unit_tests/: CMakeLists.txt  TestBitset.hpp  TestDualView.hpp  TestDynViewAPI.hpp  TestDynViewAPI_generic.hpp  TestDynViewAPI_rank12345.hpp  TestDynamicView.hpp  TestErrorReporter.hpp  TestOffsetView.hpp  TestScatterView.hpp  TestStaticCrsGraph.hpp  TestUnorderedMap.hpp  (+3 more)
core/unit_test/: CMakeLists.txt  Makefile  TestAbort.hpp  TestAggregate.hpp  TestAtomic.hpp  TestAtomicOperations.hpp  TestAtomicOperations_complexdouble.hpp  TestAtomicOperations_complexfloat.hpp  TestAtomicOperations_double.hpp  TestAtomicOperations_float.hpp  TestAtomicOperations_int.hpp  TestAtomicOperations_longint.hpp  TestAtomicOperations_longlongint.hpp  TestAtomicOperations_unsignedint.hpp  TestAtomicOperations_unsignedlongint.hpp  TestAtomicViews.hpp  TestAtomics.hpp  TestBitManipulationBuiltins.hpp  TestCXX11.hpp  TestCompilerMacros.cpp  TestCompilerMacros.hpp  TestComplex.hpp  TestConcepts.hpp  TestCrs.hpp  TestDeepCopyAlignment.hpp  TestDefaultDeviceTypeInit.hpp  TestExecSpacePartitioning.hpp  TestFunctorAnalysis.hpp  TestHalfOperators.hpp  TestHostSharedPtrAccessOnDevice.hpp  TestInit.hpp  TestInitializationSettings.cpp  TestIrregularLayout.hpp  TestLocalDeepCopy.hpp  TestMDRange.hpp  TestMDRange_a.hpp  TestMDRange_b.hpp  TestMDRange_c.hpp  TestMDRange_d.hpp  TestMDRange_e.hpp  (+51 more)
core/unit_test/category_files/: TestSYCLHostUSMSpace_Category.hpp  TestSYCL_Category.hpp
core/unit_test/cuda/: TestCuda_InterOp_StreamsMultiGPU.cpp
core/unit_test/default/: TestDefaultDeviceType.cpp  TestDefaultDeviceTypeResize.cpp  TestDefaultDeviceTypeViewAPI.cpp  TestDefaultDeviceType_a1.cpp  TestDefaultDeviceType_a2.cpp  TestDefaultDeviceType_a3.cpp  TestDefaultDeviceType_b1.cpp  TestDefaultDeviceType_b2.cpp  TestDefaultDeviceType_b3.cpp  TestDefaultDeviceType_c1.cpp  TestDefaultDeviceType_c2.cpp  TestDefaultDeviceType_c3.cpp
core/unit_test/headers_self_contained/: CMakeLists.txt
core/unit_test/hip/: TestHIP_Other.cpp  TestHIP_ScanUnit.cpp  TestHIP_TeamReductionScan.cpp
core/unit_test/incremental/: Test02_atomic_host.hpp  Test03a_ParallelFor.hpp  Test04_ParallelFor_RangePolicy.hpp  Test05_ParallelReduce_RangePolicy.hpp  Test06_ParallelFor_MDRangePolicy.hpp  Test08_deep_copy.hpp  Test10_HierarchicalBasics.hpp  Test11a_ParallelFor_TeamThreadRange.hpp  Test11b_ParallelFor_TeamVectorRange.hpp  Test11c_ParallelFor_ThreadVectorRange.hpp  Test12a_ThreadScratch.hpp  Test12b_TeamScratch.hpp  Test13a_ParallelRed_TeamThreadRange.hpp  Test13b_ParallelRed_TeamVectorRange.hpp  Test13c_ParallelRed_ThreadVectorRange.hpp  Test14_MDRangeReduce.hpp  Test16_ParallelScan.hpp  Test17_CompleteAtomic.hpp
core/unit_test/serial/: TestSerial_Other.cpp
core/unit_test/sycl/: TestSYCL_BlockSizeDeduction.cpp  TestSYCL_Init.cpp  TestSYCL_InterOp_Init.cpp  TestSYCL_InterOp_Init_Context.cpp  TestSYCL_InterOp_Streams.cpp  TestSYCL_InterOp_StreamsMultiGPU.cpp  TestSYCL_Spaces.cpp  TestSYCL_SubView_a.cpp  TestSYCL_SubView_b.cpp  TestSYCL_SubView_c01.cpp  TestSYCL_SubView_c02.cpp  TestSYCL_SubView_c03.cpp  TestSYCL_SubView_c04.cpp  TestSYCL_SubView_c05.cpp  TestSYCL_SubView_c06.cpp  TestSYCL_SubView_c07.cpp  TestSYCL_SubView_c08.cpp  TestSYCL_SubView_c09.cpp  TestSYCL_SubView_c10.cpp  TestSYCL_SubView_c11.cpp  TestSYCL_SubView_c12.cpp  TestSYCL_SubView_c13.cpp  TestSYCL_TeamScratchStreams.cpp  TestSYCL_ViewAPI_a.cpp  TestSYCL_ViewAPI_d.cpp  TestSYCL_ViewAPI_e.cpp  TestSYCL_ViewLayoutStrideAssignment.cpp  TestSYCL_ViewMapping_a.cpp  TestSYCL_ViewMapping_b.cpp  TestSYCL_ViewResize.cpp
core/unit_test/tools/: TestEventCorrectness.hpp  TestProfilingSection.cpp  TestWithoutInitializing.cpp
core/unit_test/view/: TestExtentsDatatypeConversion.cpp
docker/: Dockerfile  docker-compose.yaml
example/: CMakeLists.txt
joss/: paper.bib  paper.md
scripts/: diff_files
(+311 files in other folders)
